--- a/1new.html
+++ b/1new.html
@@ -1,2 +1,2 @@
 <link rel="stylesheet" href="style.css">
-<!--End of Tawk.to Script--><embed type="text/html" src="https://poe.com/ChatGPT" width="1200" height="750">
+<!--End of Tawk.to Script--><embed type="text/html" src="" width="1200" height="750">
