--- a/1new.html
+++ b/1new.html
@@ -1,2 +1,2 @@
 <link rel="stylesheet" href="style.css">
-<!--End of Tawk.to Script--><embed type="text/html" src="" width="1200" height="750">
+<iframe allowfullscreen src="https://wonderful-billowy-ambert.glitch.me"style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
