--- a/60new.html
+++ b/60new.html
@@ -1,1 +1,1 @@
-<iframe allowfullscreen src="http://desmume.org/" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
+<iframe allowfullscreen src="https://bobzgames.github.io/GBA/" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
