--- a/2index.html
+++ b/2index.html
@@ -24,7 +24,7 @@
      <img src="h" alt="Getting Over it" width="250" height="200">
 <a href="48new.html"><img src="https://media.wired.com/photos/5a500336968c915c2722eafe/master/w_2560%2Cc_limit/IndieGame-TopArt.jpg" alt="Chat Gpt" width="100" height="100"></a>
          
-
+     <h1> I AM AWARE OF THE PROBLEM IM TRYING TO FIX IT</h1>
 <a href="46new.html"><img src="https://play-lh.googleusercontent.com/KN_-a1pQKo1MxFMLaq9T03AysLzPNvW-zzShFrvgh6swlDFHM4q6zKTiaDqN-Nj6wQ" alt="Chat Gpt" width="100" height="100"></a>
    <img src="h" alt="JotBotAi" width="250" height="200">
 <a href="45new.html"><img src="https://cdn.glitch.global/f262dba1-9c6f-46c1-8d86-13704f018ea1/jobbot.png?v=1737770503483" alt="Chat Gpt" width="100" height="100"></a>
