--- a/41new.html
+++ b/41new.html
@@ -3,4 +3,4 @@
   <a href="https://classroom.google.com/">Panic</a>
 </h1>
 
-<iframe allowfullscreen src="https://soccer-random.github.io/" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
+<iframe allowfullscreen src="https://www-hahagames-com.webpkgcache.com/doc/-/s/www.hahagames.com/" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
