--- a/53new.html
+++ b/53new.html
@@ -1,4 +1,4 @@
-<iframe allowfullscreen src="https://coolsciencegamesubg.github.io/games/abobos-big-adventure.html" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
+<iframe allowfullscreen src="https://gameonl.com/game/2011/abobos-big-adventure/" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
 <!DOCTYPE html>
 <html>
 <head>
