--- a/58new.html
+++ b/58new.html
@@ -24,6 +24,9 @@
         <p>Click one of the buttons below to go to one of the Proxys .</p>
         <a href="https://dog-functional-ant.glitch.me/" class="button" target="_blank" rel="noopener noreferrer">Interstellar</a>
          <a href="https://saber-opalescent-galleon.glitch.me/" class="button" target="_blank" rel="noopener noreferrer">InterStellar2</a>
+      <a href="https://psychedelic-maze-mackerel.glitch.me/" class="button" target="_blank" rel="noopener noreferrer">InterStellar3</a>
+      <a href="https://defiant-creative-lace.glitch.me/" class="button" target="_blank" rel="noopener noreferrer">InterStellar4</a>
+      <a href="https://neon-spotted-twilight.glitch.me/" class="button" target="_blank" rel="noopener noreferrer">InterStellar5</a>
         <!-- Setting target="_blank" to open in a new tab -->
         <h2>
     Ive seen your feedback I hope you know I can not add Fortnite or BrawlStars Please add more detailed feedback
