--- a/70new.html
+++ b/70new.html
@@ -22,7 +22,7 @@
     <div class="content">
         <h1>NintendoGames</h1>
         
-<iframe allowfullscreen src="https://cyan-selective-fig.glitch.me/" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
+<iframe allowfullscreen src="https://nintendoboi22.github.io/" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
     </div>
 </body>
 </html>
