--- a/1new.html
+++ b/1new.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="style.css">
-<iframe allowfullscreen src="https://wonderful-billowy-ambert.glitch.me"style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
+<iframe allowfullscreen src="https://chatgate.ai/"style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
 <!DOCTYPE html>
 <html>
 <head>
