--- a/73new.html
+++ b/73new.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="style.css">
+<iframe allowfullscreen src="https://chatgate.ai/"style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,6 +10,3 @@
 <body>
   </body>
 </html>
-
-
-<iframe allowfullscreen src="https://turbowarp.org/956410040" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
