--- a/59new.html
+++ b/59new.html
@@ -9,5 +9,5 @@
   </body>
 </html>
 
-
-<iframe allowfullscreen src="https://turbowarp.org/956410040" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
+<iframe src="https://turbowarp.org/956410040/embed" width="482" height="412" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<iframe allowfullscreen src="https://scratch.mit.edu/projects/956410040" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
