--- a/71new.html
+++ b/71new.html
@@ -12,7 +12,7 @@
   <script>
     function openGame() {
     var win = window.open()
-    var url = "https://mathproblemsandanswers.vercel.app/"
+    var url = https://wackerstellar.vercel.app/"
     var iframe = win.document.createElement('iframe')
     iframe.style.width = "100%";
     iframe.style.height = "100%";
