--- a/42new.html
+++ b/42new.html
@@ -3,7 +3,7 @@
   <a href="https://classroom.google.com/">Panic</a>
 </h1>
 
-<iframe allowfullscreen src="https://geometrydashunblockedgame.github.io/" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
+<iframe allowfullscreen src="https://pertandingan-games.vercel.app/" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
 <!DOCTYPE html>
 <html>
 <head>
