--- a/21new.html
+++ b/21new.html
@@ -3,7 +3,7 @@
   <a href="https://classroom.google.com/">Panic</a>
 </h1>
 
-    <iframe allowfullscreen src="https://parkourrace.github.io/play/basketball-stars.html" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
+    <iframe allowfullscreen src="https://pertandingan-games.vercel.app/play/basketball-stars.html" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
 <!DOCTYPE html>
 <html>
 <head>
