--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </script>
 
     <div class="navbar">
-        <a href="2index.html" class="button">Games</a>
+        <a href="games222.html" class="button">Games</a>
         <a href="58new.html" class="button">Proxy</a>
         <a href="https://classroom.google.com/" class="button">PANIC!</a>
         <a href="57new.html" class="button">About</a>
