--- a/56new.html
+++ b/56new.html
@@ -25,14 +25,13 @@
         <p>Click the button below to go to the regular link.</p>
         <a href="https://pertandingan.netlify.app/" class="button" target="_blank" rel="noopener noreferrer">Regular Link</a>
              <p>Click the button below to go to a about blank tab.</p>
-      <button onclick="About Blank('https://pertandingan.netlify.app/')">Open Example.com in about:blank</button>
-      
+   <button onclick="openLinkInAboutBlank('https://www.example.com')">Open Example.com in about:blank</button>
 
     <script>
         function openLinkInAboutBlank(url) {
             const newWindow = window.open('about:blank', '_blank');
             if (newWindow) {
-                newWindow.location.href = url;
+                newWindow.location.href = https://pertandingan.netlify.app/3index;
             } else {
                 alert('Pop-up blocked! Please allow pop-ups for this site.');
             }
