--- a/56new.html
+++ b/56new.html
@@ -24,28 +24,48 @@
         <h1>Settings Page</h1>
         <p>Click the button below to go to the regular link.</p>
         <a href="https://pertandingan.netlify.app/" class="button" target="_blank" rel="noopener noreferrer">Regular Link</a>
-             <p>Click the button below to go to a about blank tab.</p>
-   
-   <!--
-        The target="_blank" attribute tells the browser to open the link in a new tab.
-        rel="noopener noreferrer" is a security best practice for links opened this way.
-    -->
-    <a href="https://pertandingan.netlify.app/3index" target="_blank" rel="noopener noreferrer">
-        <button>Go to the Competition Page</button>
-    </a>
+             <p>press "[" to go to a about blank tab.</p>
+  <script>
+    document.addEventListener("keydown", function (e) {
+      let url = null;
 
-    <!--
-        If you specifically require the JavaScript window.open() method,
-        you can use the following:
-    -->
-    <button onclick="openSpecificLink()">Open Link with JavaScript</button>
+      if (e.key === "[") {
+        url = "https://pertandingan.github.io/Pertandingan/";
+      } else if (e.key === "-") {
+        url = "https://pertandingan.github.io/ZenthTranslate/";
+      }
 
-    <script>
-        function openSpecificLink() {
-            // window.open() opens the URL in a new blank context.
-            window.open('https://pertandingan.netlify.app/3index', '_blank', 'noopener, noreferrer');
-        }
-    </script>
+      if (url) {
+        const win = window.open("about:blank", "_blank");
+        win.document.write(`
+          <!DOCTYPE html>
+          <html>
+            <head>
+              <title>Loading...</title>
+              <style>
+                html, body {
+                  margin: 0;
+                  padding: 0;
+                  height: 100%;
+                  overflow: hidden;
+                }
+                iframe {
+                  width: 100%;
+                  height: 100%;
+                  border: none;
+                }
+              </style>
+            </head>
+            <body>
+              <iframe src="${url}"></iframe>
+            </body>
+          </html>
+        `);
+        win.document.close();
+      }
+    });
+  </script>
+
           <div class="container">
         <h1>Game Settings</h1>
         <form id="settingsForm">
