--- a/71new.html
+++ b/71new.html
@@ -12,7 +12,7 @@
   <script>
     function openGame() {
     var win = window.open()
-    var url ="https://canlite.org/proxe"
+    var url ="https://interstellarai.vercel.app/"
     var iframe = win.document.createElement('iframe')
     iframe.style.width = "100%";
     iframe.style.height = "100%";
